# rust-scraper

./: Cargo.toml
resources/test/: main.html  part.html  submit.html
src/: main.rs  parser.rs
