[package]
name = "parts_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "multipart"] }
regex = "1.10.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.19.0"
futures = "0.3.30"
chrono = "0.4.37"
csv = "1.3.0"
clap = {version = "4.5.4", features = ["derive"]}
